--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.1.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "mqtt": "^5.13.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.26",
