--- a/back/package.json
+++ b/back/package.json
@@ -26,8 +26,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.4",
     "@nestjs/swagger": "^11.2.0",
-    "@nestjs/websockets": "^11.1.3",
+    "@nestjs/websockets": "^11.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mqtt": "^5.13.2",
